--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.22.0",
     "@simplewebauthn/browser": "^9.0.1",
     "@simplewebauthn/server": "^9.0.3",
+    "@sparticuz/chromium-min": "^143.0.0",
     "bcryptjs": "^3.0.3",
     "cheerio": "^1.1.2",
     "dotenv": "^17.2.3",
@@ -22,6 +23,7 @@
     "openai": "^6.10.0",
     "pg": "^8.16.3",
     "prisma": "^5.22.0",
+    "puppeteer-core": "^24.34.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "zod": "^4.1.13"
