--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "bcryptjs": "^3.0.3",
     "cheerio": "^1.1.2",
     "dotenv": "^17.2.3",
-    "next": "16.0.7",
+    "next": "^16.1.0",
     "next-auth": "^5.0.0-beta.30",
     "openai": "^6.10.0",
     "pg": "^8.16.3",
